--- a/app/views/figures/index.erb
+++ b/app/views/figures/index.erb
@@ -1,5 +1,8 @@
 <h3>All Historical Figures</h3>
 
 <%@figures.each do |item|%>
-  <p>item.name</p>
+  <p><%=item.name%></p>
 <%end%>
+
+<a class="button" href="/landmarks">Landmarks</a>
+<a class="button" href="/">Home</a>
