--- a/app/views/landmarks/new.erb
+++ b/app/views/landmarks/new.erb
@@ -1,6 +1,10 @@
 <h2>Create New Landmark</h2>
 
-<!-- add content here -->
+<form action="/landmarks" method="POST">
+  <input type="text" name= "landmark[name]" placeholder="Name:">
+  <input type="submit" value="Submit">
+</form>
+
 
 <a class="button" href="/landmarks">Landmarks</a>
 <a class="button" href="/">Home</a>
