--- a/app/views/figures/new.erb
+++ b/app/views/figures/new.erb
@@ -6,6 +6,32 @@
 </form>
 
 
+  <p>Select an existing landmark or create a new one below.</p>
+ 
+  <h3>Existing Landmarks</h3>
+  <% @landmarks.each do |item| %>
+    <input type="checkbox" name="figure[landmark_ids][]" id="<%=item.id%>" value="<%=item.id %>"><%=item.name%></input><br>
+  <% end %>
+  <br>
+ 
+  <h3>New Landmark</h3>
+  <label>Landmark Name: </label>
+  <br>
+  <input type="text" name="landmark[name]" id="landmark_name"></input>
+  <br><br>
+ 
+  <input type="submit" value="Create Landmark">
+</form>
+
+
+
+
+
+
+
+
+
+
 <!-- add content here -->
 
 <a class="button" href="/landmarks">Landmarks</a>
