--- a/app/views/figures/show.erb
+++ b/app/views/figures/show.erb
@@ -10,6 +10,8 @@
     <h2>Create New Figure</h2>
     <form action="/figures" method="POST">
       <input type="text" name= "figure[name]" placeholder="Name:">
+      <input type="text" name= "figure[title_ids][]" placeholder="Title:">
+      <input type="text" name= "figure[title_ids][]" placeholder="Title:">
       <input type="submit" value="Submit">
     </form>
     
