--- a/app/views/figures/new.erb
+++ b/app/views/figures/new.erb
@@ -2,44 +2,41 @@
 
 <form action="/figures" method="POST">
   <input type="text" name= "figure[name]" id="figure_name" placeholder="Name:">
-  <input type="submit" value="Submit">
-</form>
-
-<p>Select an existing title or create a new one below.</p>
+  
+  <p>Select an existing title or create a new one below.</p>
 
   <h3>Existing Titles </h3>
   <% @titles.each do |item| %>
-    <input type="checkbox" name="figure[title_ids][]" id="<%=item.id%>" value="<%=item.id %>"><%=item.name%></input><br>
+  <input type="checkbox" name="title[id]" id="title_<%=item.id%>" value="<%=item.id%>"><%=item.name%></input><br>
   <% end %>
   <br>
-  
-  <p><%=@titles.last.id.to_i + 1%></p>
  
   <h3>New Title</h3>
   <label>Title: </label>
   <br>
 
-  <input type="text" name="title[name]" id="title_<%=@titles.last.id + 1%>"></input>
+  <input type="text" name="title[name]" id="title_id"></input>
   <br><br>
  
-  <input type="submit" value="Create Title">
-</form>
+  <%#<input type="submit" value="Create Title"> %>
 
   <p>Select an existing landmark or create a new one below.</p>
  
   <h3>Existing Landmarks</h3>
   <% @landmarks.each do |item| %>
-    <input type="checkbox" name="figure[landmark_ids][]" id="<%=item.id%>" value="<%=item.id %>"><%=item.name%></input><br>
+    <input type="checkbox" name="landmark[id]" id="<%=item.id%>" value="<%=item.id%>"><%=item.name%></input><br>
   <% end %>
   <br>
  
   <h3>New Landmark</h3>
-  <label>Landmark Name: </label>
+  <label>Name: </label>
   <br>
   <input type="text" name="landmark[name]" id="landmark_name"></input>
+  <label>Year:</label>
+  <input type="text" name="landmark[year]" id="landmark_year"></input>
   <br><br>
- 
-  <input type="submit" value="Create Landmark">
+  
+  <input type="submit" value="Create New Figure">
 </form>
 
 <a class="button" href="/landmarks">Landmarks</a>
