--- a/app/views/figures/edit.erb
+++ b/app/views/figures/edit.erb
@@ -8,8 +8,8 @@
     <label>Edit the Figure's Name:</label>
     <br>
     <input type="text" name="figure[name]" value="<%= @figure.name %>">
- 
     <br>
+    ########################################################################################
     <p>Select an existing title or create a new one below.</p>
 
     <h3>Existing Titles</h3>
@@ -25,6 +25,32 @@
 
     <input type="text" name="title[name]" id="title_name"></input>
   <br><br>
+  
+  
+    <br>
+    <p>Select an existing landmark or create a new one below.</p>
+
+    <h3>Existing Landmarks</h3>
+      
+      <% @landmarks.each do |item| %>
+        <input type="checkbox" name="figure[title_ids][]" id="title_<%=item.id%>" value="<%=item.id%>"><%='checked' if @figure.titles include?(item)%></input><br>
+      <% end %>
+    <br>
+    
+    <h3>New Title</h3>
+      <label>Title: </label>
+    <br>
+
+    <input type="text" name="title[name]" id="title_name"></input>
+  <br><br>
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
  
     <input type="submit" value="Update Owner">
   </form>
