--- a/app/views/figures/new.erb
+++ b/app/views/figures/new.erb
@@ -17,16 +17,15 @@
 
   <input type="text" name="title[name]" id="title_id"></input>
   <br><br>
- 
-  <%#<input type="submit" value="Create Title"> %>
 
   <p>Select an existing landmark or create a new one below.</p>
  
   <h3>Existing Landmarks</h3>
   <% @landmarks.each do |item| %>
-    <input type="checkbox" name="landmark[id]" id="<%=item.id%>" value="<%=item.id%>"><%=item.name%></input><br>
+    <input type="checkbox" name="figure[landmark_ids][]" id="landmark_<%=item.id%>" value="<%=item.id%>"><%=item.name%></input><br>
   <% end %>
   <br>
+ 
  
   <h3>New Landmark</h3>
   <label>Name: </label>
