--- a/app/views/landmarks/new.erb
+++ b/app/views/landmarks/new.erb
@@ -1,10 +1,10 @@
 <h2>Create New Landmark</h2>
 
 <form action="/landmarks" method="POST">
-  <input type="text" name= "landmark[name]" placeholder="Name:">
-  <input type="submit" value="Submit">
+  <input type="text" name= "landmark[name]" id="landmark_name" placeholder="Name:">
+  <input type="text" name= "landmark[year_completed]" id="landmark_year_completed" placeholder="Year Completed:">
+  <input type="submit" value="Create New Landmark">
 </form>
-
 
 <a class="button" href="/landmarks">Landmarks</a>
 <a class="button" href="/">Home</a>
