--- a/app/views/figures/new.erb
+++ b/app/views/figures/new.erb
@@ -15,18 +15,14 @@
   <label>Title: </label>
   <br>
 
-  <input type="text" name="title[name]" id="title_id"></input>
+  <input type="text" name="title[name]" id="new_title"></input>
   <br><br>
 
   <p>Select an existing landmark or create a new one below.</p>
  
   <h3>Existing Landmarks</h3>
   <% @landmarks.each do |item| %>
-<<<<<<< HEAD
     <input type="checkbox" name="figure[landmark_ids][]" id="landmark_<%=item.id%>" value="<%=item.id%>"><%=item.name%></input><br>
-=======
-    <input type="checkbox" name="figure[landmark_ids][]" id="<%=item.id%>" value="<%=item.id%>"><%=item.name%></input><br>
->>>>>>> c2fd56146d3e75c9ee66cd4cda6143cc46cb7b9a
   <% end %>
   <br>
  
