--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -1,6 +1,15 @@
 <h2>Edit Historical Landmark</h2>
-
-<!-- add content here -->
+ 
+  <form action="/landmarks/<%=@landmark.id %>" method="POST">
+    <input id="hidden" type="hidden" name="_method" value="patch">
+    <label>Edit the Landmark's Name:</label>
+    <br>
+    <input type="text" name="landmark[name]" id="landmark_name" value="<%= @landmark.name %>">
+    <br>
+    <label>Edit the Landmark's Year:</label>
+    <input type="text" name="landmark[year]" id="landmark_year" value="<%= @landmark.year %>">
+    <input type="submit" value="Update Landmark">
+  </form>
 
 <a class="button" href="/landmarks">Landmarks</a>
 <a class="button" href="/">Home</a>
