--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -4,10 +4,10 @@
     <input id="hidden" type="hidden" name="_method" value="patch">
     <label>Edit the Landmark's Name:</label>
     <br>
-    <input type="text" name="landmark[name]" id="landmark_name" value="<%= @landmark.name %>">
+    <input type="text" name="landmark[name]" id="name" value="<%= @landmark.name %>">
     <br>
     <label>Edit the Landmark's Year:</label>
-    <input type="text" name="landmark[year]" id="landmark_year" value="<%= @landmark.year %>">
+    <input type="text" name="landmark[year]" id="year_completed" value="<%= @landmark.year_completed %>">
     <input type="submit" value="Update Landmark">
   </form>
 
