--- a/app/views/landmarks/show.erb
+++ b/app/views/landmarks/show.erb
@@ -5,7 +5,7 @@
   </tr>
   <tr>
     <td><%= @landmark.name %></td>
-    <td><%= @landmark.year_completed.to_i %></td>
+    <td><%= @landmark.year_completed %></td>
   </tr>
 <table>
 
