--- a/app/views/figures/new.erb
+++ b/app/views/figures/new.erb
@@ -26,7 +26,7 @@
   <h3>New Landmark</h3>
   <label>Name: </label>
   <br>
-  <input type="text" name="landmark[name]" id="landmark_name"></input>
+  <input type="text" name="landmark[name]" id="new_landmark"></input>
   <label>Year:</label>
   <input type="text" name="landmark[year]" id="landmark_year"></input>
   <br><br>
