--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -7,8 +7,8 @@
     <input type="text" name="landmark[name]" id="name" value="<%= @landmark.name %>">
     <br>
     <label>Edit the Landmark's Year:</label>
-    <input type="text" name="landmark[year]" id="year_completed" value="<%= @landmark.year_completed %>">
-    <input type="submit" value="Update Landmark">
+    <input type="text" name="landmark[year_completed]" id="year_completed" value="<%= @landmark.year_completed %>">
+    <input type="button" value="Edit Landmark">
   </form>
 
 <a class="button" href="/landmarks">Landmarks</a>
