--- a/app/views/landmarks/index.erb
+++ b/app/views/landmarks/index.erb
@@ -2,6 +2,7 @@
 
 <%@landmarks.each do |item|%>
   <p><%=item.name%></p>
+  <p><%=item.year_completed%></p>
 <%end%>
 
 <a class="button" href="/figures">Figures</a>
