--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -1,5 +1,8 @@
 <h2>Edit Historical Landmark</h2>
  
+ <p><%=@landmark.name%></p>
+ <p><%=@landmark.year_completed%></p>
+ 
   <form action="/landmarks/<%=@landmark.id %>" method="POST">
     <input id="hidden" type="hidden" name="_method" value="patch">
     <label>Edit the Landmark's Name:</label>
