--- a/app/views/landmarks/index.erb
+++ b/app/views/landmarks/index.erb
@@ -1,6 +1,10 @@
 <h2>All Historical Landmarks</h2>
 
-<!-- add content here -->
+<%@landmarks.each do |item|%>
+  <p><%=item.name%></p>
+  <p><%=item.year_completed%></p>
+<%end%>
+
 
 <a class="button" href="/figures">Figures</a>
 <a class="button" href="/">Home</a>
