--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -1,6 +1,21 @@
 <h2>Edit Historical Landmark</h2>
+ 
+ <p><%=@landmark.name%></p>
+ <p><%=@landmark.year_completed%></p>
+ 
+  <form action="/landmarks/<%=@landmark.id %>" method="POST">
+    <input id="hidden" type="hidden" name="_method" value="patch">
+    <label>Edit the Landmark's Name:</label>
+    <br>
+    <input type="text" name="landmark[name]" id="name" value="<%= @landmark.name %>">
+    <br>
+    <label>Edit the Landmark's Year:</label>
+    <input type="text" name="landmark[year_completed]" id="year_completed" value="<%= @landmark.year_completed %>">
+    <input type="button" value="Edit Landmark">
+  </form>
 
-<!-- add content here -->
+<a class="button" href="/landmarks">Landmarks</a>
+<a class="button" href="/">Home</a>
 
 <a class="button" href="/landmarks">Landmarks</a>
 <a class="button" href="/">Home</a>
