--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -1,9 +1,8 @@
 <h2>Edit Historical Landmark</h2>
- 
  <p><%=@landmark.name%></p>
  <p><%=@landmark.year_completed%></p>
  
-  <form action="/landmarks/<%=@landmark.id %>" method="POST">
+  <form action="/landmarks/<%=@landmark.id%>" method="POST">
     <input id="hidden" type="hidden" name="_method" value="patch">
     <label>Edit the Landmark's Name:</label>
     <br>
@@ -11,7 +10,7 @@
     <br>
     <label>Edit the Landmark's Year:</label>
     <input type="text" name="landmark[year_completed]" id="year_completed" value="<%= @landmark.year_completed %>">
-    <input type="button" value="Edit Landmark">
+    <input type="submit" value="Edit Landmark">
   </form>
 
 <a class="button" href="/landmarks">Landmarks</a>
