--- a/app/views/figures/new.erb
+++ b/app/views/figures/new.erb
@@ -18,7 +18,7 @@
   <p>Select an existing landmark or create a new one below.</p>
   <h3>Existing Landmarks</h3>
   <% @landmarks.each do |item| %>
-    <input type="checkbox" name="figure[landmark_ids][]" id="landmark_<%=item.id%>" value="<%=item.id%>"><%=item.name%></input><br>
+    <input type="radio" name="figure[landmark_ids][]" id="landmark_<%=item.id%>" value="<%=item.id%>"><%=item.name%></input><br>
   <% end %>
   <br>
  
@@ -26,9 +26,9 @@
   <h3>New Landmark</h3>
   <label>Name: </label>
   <br>
-  <input type="text" name="landmark[name]" id="new_landmark"></input>
+  <input type="text" name="figure[landmark][name]" id="new_landmark"></input>
   <label>Year:</label>
-  <input type="text" name="landmark[year]" id="landmark_year"></input>
+  <input type="text" name="figure[landmark][year]" id="landmark_year"></input>
   <br><br>
   
   <input type="submit" value="Create New Figure">
