--- a/app/views/figures/new.erb
+++ b/app/views/figures/new.erb
@@ -26,9 +26,9 @@
   <h3>New Landmark</h3>
   <label>Name: </label>
   <br>
-  <input type="text" name="figure[landmark][name]" id="new_landmark"></input>
+  <input type="text" name="landmark[name]" id="new_landmark"></input>
   <label>Year:</label>
-  <input type="text" name="figure[landmark][year]" id="landmark_year"></input>
+  <input type="text" name="landmark[year_completed]" id="landmark_year"></input>
   <br><br>
   
   <input type="submit" value="Create New Figure">
