--- a/app/views/figures/index.erb
+++ b/app/views/figures/index.erb
@@ -3,6 +3,7 @@
 <%=@boo%>
 <%@figures.each do |item|%>
   <p><%=item.name%></p>
+  <p><%=item.id%></p>
 <%end%>
 
 <a class="button" href="/landmarks">Landmarks</a>
