--- a/app/views/figures/edit.erb
+++ b/app/views/figures/edit.erb
@@ -1,32 +1,32 @@
 <h1>Edit Historical Figure</h1>
  
-  <form action="/figures/<%=@figure.id %>" method="POST">
+  <form action="/figures/<%=@figure.id%>" method="POST">
     <input id="hidden" type="hidden" name="_method" value="patch">
     <label>Edit the Figure's Name:</label>
     <br>
-    <%#<input type="text" name="figure[name]" id="figure_name" value="<%= @figure.name %>">
     <input type="text" name="figure[name]" id="figure_name" value="<%= @figure.name %>">
     <br>
-    ########################################################################################
+  
     <p>Select an existing title or create a new one below.</p>
 
     <h3>Existing Titles</h3>
       <% @titles.each do |item| %>
-        <input type="checkbox" name="figure[title_ids][]" id="title_<%=item.id%>" value="<%=item.id%>"><%='checked' if @figure.titles include?(item)%></input><br>
+        <input type="checkbox" name="figure[title_ids][]" id="title_<%=item.id%>" value="<%=item.id%>"><%='checked' if @figure.titles.include?(item)%></input><br>
       <% end %>
     <br>
     <h3>New Title</h3>
       <label>Title: </label>
     <br>
-    <input type="text" name="title[name]" id="title_name" value="<%= @figure.title %>"></input>
+     <input type="text" name= "figure[title]" id="figure_title" placeholder="Title:">
+    <%#<input type="text" name="figure[title]" id="new_title" value="<%= @figure.title%>
   <br><br>
     <br>
-    ##################################################################################################
+   
     <p>Select an existing landmark or create a new one below.</p>
 
     <h3>Existing Landmarks</h3>
       <% @landmarks.each do |item| %>
-        <input type="checkbox" name="figure[landmark_ids][]" id="title_<%=item.id%>" value="<%=item.id%>"><%='checked' if @figure.landmarks include?(item)%></input><br>
+        <input type="checkbox" name="figure[landmark_ids][]" id="title_<%=item.id%>" value="<%=item.id%>"><%='checked' if @figure.landmarks.include?(item)%></input><br>
       <% end %>
     <br>
     <h3>New Landmark</h3>
