--- a/app/views/figures/new.erb
+++ b/app/views/figures/new.erb
@@ -14,14 +14,15 @@
   <label>Title: </label>
   <br>
   <input type="text" name="title[name]" id="new_title"></input>
-  <br><br>
+  
   <p>Select an existing landmark or create a new one below.</p>
+  
   <h3>Existing Landmarks</h3>
   <% @landmarks.each do |item| %>
-    <input type="radio" name="figure[landmark_ids][]" id="landmark_<%=item.id%>" value="<%=item.id%>"><%=item.name%></input><br>
+    <input type="checkbox" name="figure[landmark_ids][]" id="landmark_<%=item.id%>" value="<%=item.id%>"><%=item.name%></input>
+    <br>
   <% end %>
   <br>
- 
  
   <h3>New Landmark</h3>
   <label>Name: </label>
