--- a/app/views/figures/show.erb
+++ b/app/views/figures/show.erb
@@ -1,20 +1,16 @@
-<html>
-  <body>
-    <table>
+<table>
       <tr>
         <td><%= @figure.name %></td>
       </tr>
     <table>
       
-    <h2>Create New Figure</h2>
+    <%#<h2>Create New Figure</h2>
     <form action="/figures" method="POST">
       <input type="text" name= "figure[name]" placeholder="Name:">
       <input type="text" name= "figure[title_ids][]" placeholder="Title:">
       <input type="text" name= "figure[title_ids][]" placeholder="Title:">
       <input type="submit" value="Submit">
-    </form>
+    </form>%>
     
-    <a class="button" href="/landmarks">Landmarks</a>
-    <a class="button" href="/">Home</a>
-  </body>
-</html>
+<a class="button" href="/landmarks">Landmarks</a>
+<a class="button" href="/">Home</a>
