--- a/app/views/figures/edit.erb
+++ b/app/views/figures/edit.erb
@@ -31,10 +31,10 @@
     <br>
     <h3>New Landmark</h3>
     <br>
-    <input type="text" name= "landmark[name]" id="landmark_name" placeholder="Name:">
+    <input type="text" name= "landmark[name]" id="new_landmark" placeholder="Name:">
     <input type="text" name= "landmark[year_completed]" id="landmark_year_completed" placeholder="Year Completed:">
   <br><br>
-    <input type="submit" value="Update Figure">
+  <input type="submit" value="Edit Figure">
   </form>
   
 <a class="button" href="/landmarks">Landmarks</a>
